Homepage HTML completed

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </div>
   </header>
   <main role="main">
+
     <!-- Benefits -->
     <section class="benefits">
       <ul class="container">
@@ -128,6 +129,15 @@
           <p class="name"><strong>Stella B.</strong><br/>Freelance Designer, N. Dakota</p>
         </li>
       </ul>
+    </section>
+
+    <!-- Last-Call -->
+    <section class="last-call">
+      <div class="container">
+        <h2>Ready to get organized?</h2>
+        <p>Sign up for a free trial today to start storing all of your favorite items and project needs with ease.</p>
+        <a href="signup.html" class="btn">Start Your Free Trial!</a>
+      </div>
     </section>
   </main>
 
