--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <h1 class="animated fadeInRight">Save, share and collaborate</h1>
       <p>storEase lets you collect and sort information.<br/>Create simple notes, store images, and add links.</p>
       <a href="signup.html" class="btn">Start Your Free Trial!</a>
-      <img src="images/Dashboard.png" alt="storEase" />
+      <img src="images/Storease-dashboard.png" alt="storEase" />
     </div>
   </header>
   <main role="main">
