--- a/dashboard-images.html
+++ b/dashboard-images.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta charset="UTF-8">
-   <title>Dashboard | storEase</title>
+   <title>Dashboard - Images | storEase</title>
 
    <!-- Google Fonts -->
    <link href="https://fonts.googleapis.com/css?family=Libre+Franklin:100,100i,300,300i,400,400i,700,700i" rel="stylesheet">
@@ -23,9 +23,9 @@
     <div class="items">
       <p>Items</p>
       <ul>
-         <li><a href="#"><i class="fa fa-th-large"></i> All Items</a></li>
+         <li><a href="dashboard.html"><i class="fa fa-th-large"></i> All Items</a></li>
          <li><a href="#"><i class="fa fa-file-o"></i> Notes</a></li>
-         <li><a href="dashboard-images.html"><i class="fa fa-picture-o"></i> Images</a></li>
+         <li><a href="#"><i class="fa fa-picture-o"></i> Images</a></li>
          <li><a href="#"><i class="fa fa-link"></i> Links</a></li>
        </ul>
        <p>Boxes</p>
@@ -46,7 +46,7 @@
     <section class="content">
       <div class="container">
         <div class="header">
-          <h1>All Items</h1>
+          <h1>Images</h1>
           <a href="#" class="btn">+ Add a New Item</a>
         </div>
       </div>
@@ -58,15 +58,12 @@
         </div>
         <div class="content-item">
           <div class="item-box">
-            <h2><img class="favicon" src="https://www.airbnb.com/favicon.ico"> <a href="#">airbnb.com</a></h2>
-            <p>Vacation Rentals, Homes, Apartments &amp; Rooms for Rent &mdash; Airbnb</p>
+            <img src="https://images.pexels.com/photos/425008/pexels-photo-425008.jpeg?w=940&h=650&auto=compress&cs=tinysrgb">
           </div>
         </div>
         <div class="content-item">
           <div class="item-box">
-            <h2><a href="#">Need to find a designer</a></h2>
-            <p>We have a one-person design team, but are ready to expand. We need to look for a second designer right now so we can continue to grow.</p>
-            <p>Put your recommendations here so we can view all of them. ...</p>
+            <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?h=350&auto=compress&cs=tinysrgb">
           </div>
         </div>
         <div class="content-item">
@@ -76,25 +73,11 @@
         </div>
         <div class="content-item">
           <div class="item-box">
-            <h2><img class="favicon" src="https://www.yourkarma.com/favicon.ico"> <a href="#">yourkarma.com</a></h2>
-            <p>Karma Go lets you take WiFi everywhere. Pay-as-you-go for data that never expires. No contracts or monthly fees. With nationwide coverage on LTE, stay connected to the internet with all of your devices, seamlessly.</p>
+            <img src="https://images.pexels.com/photos/261510/pexels-photo-261510.jpeg?w=940&h=650&auto=compress&cs=tinysrgb">
           </div>
-        </div>
         <div class="content-item">
           <div class="item-box">
             <img src="http://78.media.tumblr.com/2885761c48092073c5c292e610b93552/tumblr_nqx7o5eOU11tubinno1_1280.jpg">
-        </div>
-        <div class="content-item">
-          <div class="item-box">
-            <h2><a href="#">Testing</a></h2>
-            <p>5, 4, 3, 2, 1 ...</p>
-          </div>
-        </div>
-        <div class="content-item">
-          <div class="item-box">
-            <h2><img class="favicon" src="https://www.invisionapp.com/favicon.ico"> <a href="#">invisionapp.com</a></h2>
-            <p>Free Web &amp; Mobile (iOS, Android) Prototyping and UI Mockup Tool | InVision</p>
-          </div>
         </div>
         <div class="content-item">
           <div class="item-box">
@@ -103,12 +86,51 @@
         </div>
         <div class="content-item">
           <div class="item-box">
-            <h2><a href="#">Why storing inspiration is great</a></h2>
-            <p>storEase is a new tool to help collect and store your inspiration and information. From images, to links, to notes like this one, you can keep track of all your favorite things.</p>
+            <img src="https://images.pexels.com/photos/599459/pexels-photo-599459.jpeg?w=940&h=650&auto=compress&cs=tinysrgb">
+          </div>
+        </div>
+        <div class="content-item">
+          <div class="item-box">
+            <img src="https://images.pexels.com/photos/57690/pexels-photo-57690.jpeg?w=940&h=650&auto=compress&cs=tinysrgb">
+          </div>
+        </div>
+        <div class="content-item">
+          <div class="item-box">
+            <img src="https://images.pexels.com/photos/187334/pexels-photo-187334.jpeg?w=940&h=650&auto=compress&cs=tinysrgb">
+          </div>
+        </div>
+        <div class="content-item">
+          <div class="item-box">
+            <img src="https://images.pexels.com/photos/554609/pexels-photo-554609.jpeg?h=350&auto=compress&cs=tinysrgb">
+          </div>
+        </div>
+        <div class="content-item">
+          <div class="item-box">
+            <img src="https://images.pexels.com/photos/305268/pexels-photo-305268.jpeg?h=350&auto=compress&cs=tinysrgb">
+          </div>
+        </div>
+        <div class="content-item">
+          <div class="item-box">
+            <img src="https://images.pexels.com/photos/358383/pexels-photo-358383.jpeg?w=940&h=650&auto=compress&cs=tinysrgb">
+          </div>
+        </div>
+        <div class="content-item">
+          <div class="item-box">
+            <img src="https://images.pexels.com/photos/297755/pexels-photo-297755.jpeg?w=940&h=650&auto=compress&cs=tinysrgb">
+          </div>
+        </div>
+        <div class="content-item">
+          <div class="item-box">
+            <img src="https://images.pexels.com/photos/437716/pexels-photo-437716.jpeg?h=350&auto=compress&cs=tinysrgb">
+          </div>
+        </div>
+        <div class="content-item">
+          <div class="item-box">
+            <img src="https://images.pexels.com/photos/433134/pexels-photo-433134.jpeg?w=940&h=650&auto=compress&cs=tinysrgb">
           </div>
         </div>
       </div>
     </section>
   </main>
-</body>
-</html>
+  </body>
+  </html>
