--- a/dashboard-images.html
+++ b/dashboard-images.html
@@ -75,9 +75,11 @@
           <div class="item-box">
             <img src="https://images.pexels.com/photos/261510/pexels-photo-261510.jpeg?w=940&h=650&auto=compress&cs=tinysrgb">
           </div>
+        </div>
         <div class="content-item">
           <div class="item-box">
             <img src="http://78.media.tumblr.com/2885761c48092073c5c292e610b93552/tumblr_nqx7o5eOU11tubinno1_1280.jpg">
+          </div>
         </div>
         <div class="content-item">
           <div class="item-box">
