--- a/dashboard.html
+++ b/dashboard.html
@@ -83,6 +83,7 @@
         <div class="content-item">
           <div class="item-box">
             <img src="http://78.media.tumblr.com/2885761c48092073c5c292e610b93552/tumblr_nqx7o5eOU11tubinno1_1280.jpg">
+          </div>
         </div>
         <div class="content-item">
           <div class="item-box">
