--- a/dashboard.html
+++ b/dashboard.html
@@ -18,12 +18,12 @@
 </head>
 <body class="dashboard">
   <!-- LEFT NAV -->
-  <nav id="left-nav"class="left-nav">
+  <nav id="left-nav" class="left-nav">
     <a href="#" class="site-logo"><img src="images/site-Logo.png" /></a>
     <div class="items">
-      <p>Items</p>
+      <p class=>Items</p>
       <ul>
-         <li><a href="#"><i class="fa fa-th-large"></i> All Items</a></li>
+         <li class="active"><a href="#"><i class="fa fa-th-large"></i> All Items</a></li>
          <li><a href="#"><i class="fa fa-file-o"></i> Notes</a></li>
          <li><a href="dashboard-images.html"><i class="fa fa-picture-o"></i> Images</a></li>
          <li><a href="#"><i class="fa fa-link"></i> Links</a></li>
