--- a/dashboard.html
+++ b/dashboard.html
@@ -17,6 +17,8 @@
 
 </head>
 <body class="dashboard">
+  <!-- RESPONSIVE NAV -->
+  <a href="#" class="hamburger" id="menu">&#9776;</a>
   <!-- LEFT NAV -->
   <nav id="left-nav" class="left-nav">
     <a href="#" class="site-logo"><img src="images/site-Logo.png" /></a>
@@ -120,10 +122,13 @@
       </div>
     </section>
   </main>
-  <script src="js/jquery-2.1.3.min.js"></script>
+  <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/dropit.js"></script>
   <script type="text/javascript">
     $(".menu").dropit();
+    $("#menu").click(function(){
+      $("#left-nav").toggleClass("open", 200);
+    });
   </script>
 </body>
 </html>
