--- a/dashboard.html
+++ b/dashboard.html
@@ -40,7 +40,16 @@
     <div class="settings">
       <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg">
       <p>Joey Kirk</p>
-      <a href="#"><i class="fa fa-cog"></i></a>
+      <ul class="settings-menu">
+        <li>
+          <a href="#"><i class="fa fa-cog"></i></a>
+          <ul>
+              <li><a href="#"><i class="fa fa-file-o"></i> Account Settings</a></li>
+              <li><a href="#"><i class="fa fa-picture-o"></i> Collaborators</a></li>
+              <li><a href="#"><i class="fa fa-link"></i> Sign Out</a></li>
+          </ul>
+        </li>
+      </ul>
     </div>
   </nav>
   <main role="main">
@@ -126,6 +135,7 @@
   <script src="js/dropit.js"></script>
   <script type="text/javascript">
     $(".menu").dropit();
+    $(".settings-menu").dropit();
     $("#menu").click(function(){
       $("#left-nav").toggleClass("open", 200);
     });
