--- a/dashboard.html
+++ b/dashboard.html
@@ -40,7 +40,7 @@
     <div class="settings">
       <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg">
       <p>Joey Kirk</p>
-      <ul class="settings-menu">
+      <ul class="menu">
         <li>
           <a href="#"><i class="fa fa-cog"></i></a>
           <ul>
@@ -135,7 +135,6 @@
   <script src="js/dropit.js"></script>
   <script type="text/javascript">
     $(".menu").dropit();
-    $(".settings-menu").dropit();
     $("#menu").click(function(){
       $("#left-nav").toggleClass("open", 200);
     });
