Dashboard JavaScript completed

--- a/dashboard.html
+++ b/dashboard.html
@@ -44,9 +44,9 @@
         <li>
           <a href="#"><i class="fa fa-cog"></i></a>
           <ul>
-              <li><a href="#"><i class="fa fa-file-o"></i> Account Settings</a></li>
-              <li><a href="#"><i class="fa fa-picture-o"></i> Collaborators</a></li>
-              <li><a href="#"><i class="fa fa-link"></i> Sign Out</a></li>
+              <li><a href="#"><i class="fa fa-gear"></i> Account Settings</a></li>
+              <li><a href="#"><i class="fa fa-group"></i> Collaborators</a></li>
+              <li><a href="#"><i class="fa fa-sign-out"></i> Sign Out</a></li>
           </ul>
         </li>
       </ul>
@@ -135,6 +135,7 @@
   <script src="js/dropit.js"></script>
   <script type="text/javascript">
     $(".menu").dropit();
+    $(".settings").dropit();
     $("#menu").click(function(){
       $("#left-nav").toggleClass("open", 200);
     });
